manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: watch-app
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
       app: backend
  template:
    metadata:
      name: backend-rs
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: dani334/watch-store-backend:latest 
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: watch-app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      targetPort: 4000
      port: 4000
