manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: watch-app
  labels:
     app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata: 
     name: frontend-rs 
     labels:
        app: frontend
    spec: 
     containers:
       - name: frontend-container
         image: dani334/watch-store-frontend:latest 
         ports:
           - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: watch-app
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
